add pfft manual to build system

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -97,7 +97,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 
 \hyphenation{equi-spaced non-equi-spaced}
 
-\input{../../share/def/shortcuts.tex} % Shortcuts for math symbols
+\input{shortcuts.tex} % Shortcuts for math symbols
 
 \pagestyle{scrheadings}
 
@@ -155,7 +155,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   % \selectbiblanguage{english}
   \bibliographystyle{bababbrv-fl}
   % \bibliographystyle{abbrv}
-  \bibliography{../../../../../../nfft/doc/paper/references/references}
+  \bibliography{bibliography}
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
