--- a/doc/tutorial.tex
+++ b/doc/tutorial.tex
@@ -699,7 +699,8 @@ Comparision of non-transposed (left) and transposed (right) $d$-dimensional arra
 % \code{n}
 % \code{comm\_cart\_2d}
 
-\lstinputlisting[float, caption={Minimal PFFT test program.}, label=lst:minpfft]{../../../software/PFFT/trunk/tests/minimal_test.c}
+\lstinputlisting[float, caption={Minimal PFFT test program.}, label=lst:min_c2c]{code/manual_min_c2c.c}
+% \lstinputlisting[float, caption={Minimal PFFT test program.}, label=lst:min_c2c]{../tests/manual_min_c2c.c}
 
 
 
