--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -54,6 +54,8 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 % \floatname{algorithm}{Algorithmus} % use german title for algorithms
 % \numberwithin{algorithm}{chapter}
 
+\usepackage{xspace}
+
 %% activate for compact page layout
 \usepackage{geometry}
 \geometry{top=30.4mm, left=30.4mm, text={155mm,240mm}, headheight=10mm, headsep=5mm, includemp, marginparwidth=15.4mm}
@@ -134,8 +136,8 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 %       \end{tabular}
 
       \vspace*{3cm}
-      Download Parallel Fast Fourier Transform Software Library at \\
-      {\large \url{http://www.tu-chemnitz.de/~mpip/software.php}}
+      Download \textbf{\Large P}arallel \textbf{\Large F}ast \textbf{\Large F}ourier \textbf{\Large T}ransform Software Library at \\
+      {\large \websoft}\\
     \end{center}
     \vfill
     michael.pippig@mathematik.tu-chemnitz.de
@@ -150,6 +152,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   \include{tutorial} % mit Seitenumbruechen
   \include{install} % mit Seitenumbruechen
   \include{features} % mit Seitenumbruechen
+  \include{interface} % mit Seitenumbruechen
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % \selectbiblanguage{english}
