--- a/doc/install.tex
+++ b/doc/install.tex
@@ -2,25 +2,54 @@
 \chapter{Installation}\label{chap:inst}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+The install of PFFT is based on the Autotools and follows the typical workflow
+\begin{lstlisting}[escapechar=§]
+./configure
+make
+make install
+\end{lstlisting}
 
 
+\section{Install of the Latest Official FFTW Release}\label{sec:fftw_inst}
+PFFT depends on Release~\fftwversion{} of the FFTW library~\cite{fftw}.
+For sake of completeness, we show the command line based install procedure in the following.
+However, note that we provide install scripts on \websoft that simplify the install a lot.
+We highly recommend to use these install scripts, since they additionally apply several
+performance patches and bugfixes that have been submitted to the FFTW developers but
+are not yet included in the official releases.
+\begin{lstlisting}[escapechar=§]
+wget http://www.fftw.org/fftw-§\fftwversionsl§.tar.gz
+tar xzvf fftw-§\fftwversion§.tar.gz
+cd fftw-§\fftwversion§
+./configure --enable-mpi --prefix=$HOME/local/fftw3_mpi §\label{lst:fftw:conf}§
+make
+make install
+\end{lstlisting}
+The MPI algorithms of FFTW must be build with a MPI C compiler. Add the statement \code{MPICC=\$MPICCOMP}
+at the end of line~\ref{lst:fftw:conf} if the \code{configure} script fails to determine the right
+MPI C compiler \code{\$MPICCOMP}. Similarly, the MPI Fortran compiler \code{\$MPIFCOMP} is set by \code{MPIFC=\$MPIFCOMP}.
 
-In the simplest case, your hardware platform will be recognized by the PFFT configure script automatically,
-so all we have to do is
+\section{Install of the PFFT library}
+In the simplest case, the hardware platform and the \fftw-\fftwversion{} library are
+recognized by the PFFT configure script automatically, so all we have to do is
 \begin{lstlisting}[escapechar=§]
 wget http://www.tu-chemnitz.de/~mpip/software/pfft-§\pfftversionsl§.tar.gz
 tar xzvf pfft-§\pfftversion§.tar.gz
 cd pfft-§\pfftversion§
 ./configure
 make
+make check
+make install
 \end{lstlisting}
-
-If the \fftw\fftwversion{} software library is already installed on your system but not found by the configure script,
-you can provide the FFTW installation directory \code{\$FFTWHOME} to configure by
+Hereby, the optional call \code{make check} builds the test programs.
+If the \fftw-\fftwversion{} software library is already installed on your system but not found by the configure script,
+you can provide the FFTW installation directory \code{\$FFTWDIR} to configure by
 \begin{lstlisting}
-./configure --with-fftw3=$FFTWHOME
+./configure --with-fftw3=$FFTWDIR
 \end{lstlisting}
-or specify the FFTW include directory \code{\$FFTWINC} and FFTW library directory \code{\$FFTWLIB} separately via
+This call implies that the FFTW header files are located in \code{\$FFTWDIR/include} and the FFTW library files are located
+in \code{\$FFTWDIR/lib}. Otherwise, one should specify the FFTW include path \code{\$FFTWINC} and the FFTW library path
+\code{\$FFTWLIB} separately by
 \begin{lstlisting}
 ./configure --with-fftw3-includedir=$FFTWINC --with-fftw3-libdir=$FFTWLIB
 \end{lstlisting}
@@ -28,44 +57,14 @@ To install PFFT in a user specified directory \code{\$PFFTINSTDIR} call configur
 \begin{lstlisting}
 ./configure --prefix=$PFFTINSTDIR
 \end{lstlisting}
-
-
-\section{Install the Latest Official Release of FFTW}
-
-\begin{lstlisting}[escapechar=§]
-wget http://www.fftw.org/fftw-§\fftwversionsl§.tar.gz
-tar xzvf fftw-§\fftwversion§.tar.gz
-cd fftw-§\fftwversion§
-./configure --enable-mpi --prefix=$HOME/local/fftw3_mpi
-make
-make install
-\end{lstlisting}
-
-\begin{lstlisting}[escapechar=§]
-wget http://www.tu-chemnitz.de/~mpip/software/pfft-§\pfftversionsl§.tar.gz
-tar xzvf pfft-§\pfftversion§.tar.gz
-cd pfft-§\pfftversion§
-./configure --with-fftw3=$HOME/local/fftw3_mpi
-make
-\end{lstlisting}
-
-
-
-
+This mandatory whenever you do not have root permissions on your machine, since the default install paths of 
+\code{configure} are not accessible by normal users.
+The PFFT library must be build with a MPI compiler. In Section~\ref{sec:fftw_inst} we describe how to hand the right compilers to the \code{configure} script.
+For more details on the options of the \code{configure} script call
 \begin{lstlisting}
-../configure --with-fftw3=$FFTWDIR
+./configure --help
 \end{lstlisting}
-where \code{FFTWDIR} stands for the install directory of FFTW. This is eqivalent to
-\begin{lstlisting}
-../configure --with-fftw3-libdir=$FFTWDIR/lib --with-fftw3-includedir=$FFTWDIR/include
-\end{lstlisting}
-but the second call gives the flexibility to declare arbitrary include and lib directories.
-
 
 \begin{compactitem}
   \item[\mybox] describe complete install procedure with shell (like I did for Heraeus summer school and Joseba Alberdi)
-  \item[\mybox] explain usage of configure script
-  \item[\mybox] make shure that the preprocessor can find \code{fftw3.h} and \code{fftw3-mpi.h}
-  \item[\mybox] \verb+#include <complex.h> #include <pfft.h>+
-  \item[\mybox] use a MPI compiler wrapper, or make mpi libraries and header available
 \end{compactitem}
