PFFT manual: save intermediate state

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -94,3 +94,20 @@
   publisher = {MIT Press},
   address = {Cambridge, MA, USA},
 }
+
+@ARTICLE{PiPo13,
+  author = {Michael Pippig and Daniel Potts},
+  title = {Parallel Three-Dimensional Nonequispaced Fast {Fourier} Transforms
+        and Their Application to Particle Simulation},
+  journal = {SIAM J. Sci. Comput.},
+  year = {2013},
+  volume = {accepted},
+  optpages = {},
+  optnumber = {}
+}
+
+@misc{pnfft,
+        Author = {Michael Pippig},
+        Title = {{PNFFT}, {Parallel} {Nonequispaced} {FFT} subroutine library},
+        Url = {http://www.tu-chemnitz.de/~mpip/software.php},
+        Year = {2011}}
