--- a/doc/features.tex
+++ b/doc/features.tex
@@ -235,3 +235,6 @@ $\frac{n_1}{P_1Q_1} = \frac{674}{16\cdot 2}$:
 %------------------------------------------------------------------------------
 
 
+%------------------------------------------------------------------------------
+\section{Single and long double precision}
+%------------------------------------------------------------------------------
