--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -153,6 +153,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   \include{install} % mit Seitenumbruechen
   \include{features} % mit Seitenumbruechen
   \include{interface} % mit Seitenumbruechen
+%   \include{develop} % mit Seitenumbruechen
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % \selectbiblanguage{english}
