--- a/doc/tutorial.tex
+++ b/doc/tutorial.tex
@@ -6,43 +6,12 @@ The following chapter describes the usage of the PFFT library corresponding to t
 that are included in the library. If you are interested in the more advanced features of PFFT you
 should also have a look at chapter~\ref{chap:feat}.
 
-\section{Some Comments on MPI/FFTW}
-
-The PFFT library was designed for distributed memory architectures and was implemented based on the Message Passing Interface (MPI).
-We assume that the user of PFFT is at least familiar with the basics of the MPI programming paradigm.
-Nevertheless, we explain some of the basic MPI concepts whenever they are important to understand
-the design of the PFFT library. We tried to hide most of the parallel coding details from the user,
-but of course this is limited by the fact that PFFT itself is a parallel software library.
-For more details on the MPI programming language we refer to the MPI Standard~\cite{MPI-2.2}, see also \cite{GrLuTh99} for detailed explanations.
-Since the PFFT interface was written as close as possible to the FFTW interface, the user will benefit from
-
-
-Furthermore, you should be familiar with the usage of the FFTW software library,
-
-Following the MPI standard~\cite{MPI-2.2} we use the term process to denote the smallest
-processing unit of a parallel machine.
-
-will adapt to the MPI standard and use the term process to indicate the smallest \\
-
-
-We stick to the term MPI standard introduces the term process to indicate a \\
-The term process abstracts form the widely used terms processors and nodes. \\
-Note that the term process abstracts the code development from the real physical architecture. For example we can \\
-At first glance, it seems to be artificial to \\
-\emph{An MPI program consists of autonomous processes, executing their own code, in an MIMD style.}
-( MPI: A Message-Passing Interface Standard, page 27)
-\begin{compactitem}
-  \item process (identified in most cases with processors/nodes/cores)
-  \item plan
-\end{compactitem}
-
 \section{A first parallel transform}
-
 We explain the basic steps for computing a parallel FFT with the PFFT library at the example
 of the short test program given by Listing~\ref{lst:min_c2c}. This test computes a three-dimensional c2c-FFT on
 a two-dimensional process mesh. The source code can also be found in directory \code{tests/}
 of the library's source code tree. 
-\lstinputlisting[float, caption={Minimal PFFT test program.}, label=lst:min_c2c]{code/manual_min_c2c.c}
+\lstinputlisting[float, caption={Minimal parallel c2c-FFT test program.}, label=lst:min_c2c]{code/manual_min_c2c.c}
 
 After initializing MPI with \code{MPI_Init} and before calling any PFFT routine we need to initialize
 the parallel computations via
@@ -73,336 +42,157 @@ ptrdiff_t pfft_local_size_3d(
     ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
     ptrdiff_t *local_no, ptrdiff_t *local_o_start);
 \end{lstlisting}
+Hereby, \code{n}, \code{local_ni}, \code{local_i_start}, \code{local_no}, \code{local_o_start} are supposed
+to be arrays of length $3$.
 This function returns the size of the local complex array that needs to be allocated by every process to
 execute PFFT. In most cases, this coincides with the product of the local array sizes, but in some cases
 it may be bigger, whenever the parallel algorithm needs some extra storage to be executed.
-
-
-
+The input value \code{n} consists of the three-dimensional FFT size and \code{pfft_flags} serves to adjust
+some details of the parallel execution. For sake of simplicity, we restrict our self to
+\code{pfft_flags=PFFT_TRANSPOSED_NONE} for a while and explain the more sophisticated flags at a later point.
+The output arrays \code{local_ni} and \code{local_i_start} give the size and the offset of the local input array
+that results from the parallel block distribution of the global input array, i.e.,
+every process owns the input data \code{in[k[0],k[1],k[2]]} with \code{local_i_start[t] <= k[t] < local_i_start[t] + local_ni[t]}
+for \code{t=0,1,2}. Analogously, the output parameters \code{local_i_start} and \code{local_no} contain the size
+and the offset of the local output array.
 
 Next the input and output arrays must be allocated. For performance reasons this should be done using
 \begin{lstlisting}
-void *fftw_malloc(size_t size);
+pfft_complex* pfft_alloc_complex(size_t size);
 \end{lstlisting}
-Nevertheless, you can also use any other dynamic memory allocation. Have a look at the FFTW user manual~\cite{FFTW05}
-for more details.
+Nevertheless, you can also use any other dynamic memory allocation. Have a look at Section~3.1
+of the FFTW user manual available under \url{www.fftw.org/fftw3_doc} for more details on alignment
+and \code{fftw_malloc}, which is called within all PFFT allocation functions.
 
-The planning of a single three-dimensional parallel DFT of size \code{n[0]} x \code{n[1]} x \code{n[2]} is done by the function
+The planning of a single three-dimensional parallel FFT of size \code{n[0]} x \code{n[1]} x \code{n[2]}
+is done by the function
 \begin{lstlisting}
 pfft_plan pfft_plan_dft_3d(
-    ptrdiff_t *n, fftw_complex *in, fftw_complex *out,
-    MPI_Comm comm_cart_2d, int sign,
-    unsigned pfft_flags, unsigned fftw_flags);
+    ptrdiff_t *n, pfft_complex *in, pfft_complex *out,
+    MPI_Comm comm_cart_2d, int sign, unsigned pfft_flags);
 \end{lstlisting}
 We provide the address of the input and output array by the pointers \code{in} and \code{out},
-respectively. An inplace transform is assumed if these pointers are equal. As mentioned above,
-PFFT calculates the DFT on a periodic, two-dimensional Cartesian communicator \code{comm\_cart\_2d}.
-We recommend to use \code{pfft\_create\_procmesh\_2d} to generate an appropriate communicator.
-Similar to FFTW the integer \code{sign} gives the sign in the exponential of the DFT. The
-\code{pfft\_flags} must coincide with the flags that were used to call \code{pfft\_local\_size\_3d}.
-Otherwise the data layout may not match the offset parameters. The last argument \code{fftw\_flags}
-can be used to adjust the planning effort. Note that except for \code{FFTW\_ESTIMATE} the input and
-output array may be overwritten during the planning.
+respectively. An inplace transform is assumed if these pointers are equal. 
+Similar to FFTW the integer \code{sign} gives the sign in the exponential of the FFT.
+The \code{pfft\_flags} must coincide with the flags that were used to call \code{pfft_local_size_3d}.
+Otherwise the data layout of the parallel execution may not match calculated local array sizes.
+This function returns a plan, some structure that includes all the information we need to perform a
+parallel FFT.
 
-
-During the initialization of the input, one has to take into account the parallel decomposition.
-\emph{show how to fill 3d data into 1d array with offsets - is this too detailed stuff???}
-
+Once the plan is generated, we are allowed to fill the input array \code{in}. Note, that in most cases
+the planning \code{pfft_plan_dft_3d} would overwrite the input array \code{in}. That's you should not
+write any sensitive data into \code{in} until the plan was generated.
+For simplicity, our test program makes use of the library function
 \begin{lstlisting}
 void pfft_init_input_3d(
     ptrdiff_t *n, ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
     MPI_Comm comm_cart_2d,
     fftw_complex *in);
 \end{lstlisting}
-
-
-
-Executing the plan is now very easy.
+to fill the input array with some numbers. Alternatively, one can fill the array with a function \code{func} of choice
+and the following loop that takes account of the parallel data layout
+\begin{lstlisting}
+ptrdiff_t m=0;
+for(ptrdiff_t k0=0; k0 < local_ni[0]; k0++)
+  for(ptrdiff_t k1=0; k1 < local_ni[1]; k1++)
+    for(ptrdiff_t k2=0; k2 < local_ni[2]; k2++)
+      in[m++] = func(k0 + local_i_start[0],
+                     k1 + local_i_start[1],
+                     k2 + local_i_start[2]);
+\end{lstlisting}
+The parallel FFT is computed at the moment we execute the generated plan
 \begin{lstlisting}
 void pfft_execute(pfft_plan plan);
 \end{lstlisting}
-
-Finally we free the allocated memory
+Now, the results can be read from \code{out} with an analogous three-dimensional loop.
+If we do not want to execute another parallel FFT of the same type, we free the allocated memory of the plan with
 \begin{lstlisting}
 void pfft_destroy_plan(pfft_plan plan);
 \end{lstlisting}
-
-Use
+Additionally, we use
 \begin{lstlisting}
-void fftw_free(void *ptr);
+int MPI_Comm_free(MPI_Comm *comm);  
 \end{lstlisting}
-to free memory allocated by \code{fftw_malloc}.
-
-\subsubsection*{ToDo}
-\begin{compactitem}
-  \item describe data offsets somewhere (maybe already in the introduction?)
-  \item move details into features chapter
-  \item do backward transform in minimal test??? (better shows the usage of forward and backward flags)
-  \item adjust line breaks in minimal test that they look nice in latex
-  \item adjust line numbers in code fracments(?)
-\end{compactitem}
-
-Since the data layout of the input and output array differ, the algorithm differ for forward and backward
-DFTs. \emph{Unterschied zu FFTW forward und backward deutlich machen}
-
-
-
-
-
-
-
-
-\newpage
-\subsection{PFFT Interface Layer Specification}
-\begin{compactitem}
-  \myitem start with internal interface and simplify it into basic interface
-\end{compactitem}
-
-
-\emph{Gcell Internal Interface}
-\begin{compactitem}
-  \item[+] \verb++
-  \item[+] \verb++
-  \item[+] \verb++
-\end{compactitem}
-
-
-
-
-\emph{Basic Interface}
-\begin{compactitem}
-  \item[+] \verb+const INT *n+
-  \item[+] \verb+C *in+
-  \item[+] \verb+C *out+
-  \item[+] \verb+MPI\_Comm comm\_cart\_2d+
-  \item[+] \verb+int sign+
-  \item[+] \red{unsigned pfft\_flags}
-  \item[+] \verb+unsigned fftw\_flags+
-\end{compactitem}
-
-\emph{3D Basic Interface}
-\begin{compactitem}
-  \item[-] \verb+const INT *n+
-  \item[+] \verb+INT n0, n1, n2+
-\end{compactitem}
-
-\emph{3D Basic Interface Transposed}
-\begin{compactitem}
-  \item[-] \verb+const INT *n+
-  \item[+] \verb+INT n0, n1, n2+
-  \item[+] \red{unsigned pfft\_flags}
-\end{compactitem}
-
-\emph{Advanced Interface}
-\begin{compactitem}
-  \item[+] \verb+const INT *ni+
-  \item[+] \verb+const INT *no+
-  \item[+] \verb+INT howmany+
-  \item[+] \verb+const INT *block_col+
-  \item[+] \verb+const INT *block_row+
-\end{compactitem}
-
-\emph{Guru Interface}
-\begin{compactitem}
-  \item[-] \red{unsigned pfft\_flags}
-  \item[+] \verb+pfft\_profile *prf+
-  \item[+] \verb+pfft\_permutation *perm+
-\end{compactitem}
-
-\emph{Internal Interface}
-\begin{compactitem}
-  \item[$-$] \verb+MPI_Comm comm_cart_2d+
-  \item[+] \red{MPI\_Comm comm\_col}
-  \item[+] \red{MPI\_Comm comm\_row}
-  \item[+] \verb+pfft_truncation *trc+
-  \item[+] \verb+user_blocksize+ $\Rightarrow$ \verb+block_size_internal+
-  \item[+] \verb+howmany+ $\Rightarrow$ \verb+tuplesize+
-  \item[+] \verb+fftw_flags+ $\Rightarrow$ \verb+fftw_planing_flags+
-\end{compactitem}
-
-
-\newcommand{\redlst}[1]{\lstinline+#1+}
-
-\newpage
-\subsection{PFFT Interface - Headers}
-\emph{New PFFT Interface: local size (Internal, Guru, Adv, Basic, 3d, 2d)}
+to free the communicator allocated by \code{pfft_create_procmesh_2d} and
 \begin{lstlisting}
-INT PX(local_size_internal)(
-    int (*@\color{red}rnk\_nc@*), const INT *n, const INT *ni, const INT *no,
-    INT (*@\color{red}tuple\_size@*), const INT *iblock, const INT *oblock,
-    int (*@\color{red}rnk\_pm@*), MPI_Comm (*@\color{red}*comms\_pm@*),
-    INT *local_ni, INT *local_i_start,
-    INT *local_no, INT *local_o_start);
-// blocks are internal blocks (NULLs are substituted by default values)
-// use MPI_Cart_split multiple times to get comms_1d
-// canonical PFFT:
-// one more array dimension, than procmesh dimension
-// tuple_size includes howmany and the last dimensions
-
-INT PX(local_size_guru)(
-    int rnk, const INT *n, const INT *ni, const INT *no,
-    const (*@\red{PX(profile) *prf}@*), const (*@\color{red}PX(permutation) *perm@*),
-    INT (*@\color{green}howmany@*), const INT *iblock, const INT *oblock,
-    MPI_Comm (*@\color{green}comm\_cart@*),
-    INT *local_ni, INT *local_i_start,
-    INT *local_no, INT *local_o_start,
-    PX(permutation) (*@\color{orange}*perm\_out)@*);
-/* !!! prf depends on perm !!! */
-/* !!! oblock depends on perm, prf, no !!! */
-
-INT PX(local_size_many_transposed)(
-    int rnk, const INT *n, const INT (*@\color{red}*ni@*), const INT (*@\color{red}*no@*),
-    INT (*@\color{red}howmany@*), const INT (*@\color{red}*iblock@*), const INT (*@\color{red}*oblock@*),
-    MPI_Comm comm_cart
-    INT *local_ni, INT *local_i_start,
-    INT *local_no, INT *local_o_start);
-INT PX(local_size_many)(
-    int rnk, const INT *n, const INT (*@\color{red}*ni@*), const INT (*@\color{red}*no@*),
-    INT (*@\color{red}howmany@*), const INT (*@\color{red}*iblock@*), const INT (*@\color{red}*oblock@*),
-    MPI_Comm comm_cart
-    INT *local_ni, INT *local_i_start,
-    INT (*@\color{red}*local\_no@*), INT (*@\color{red}*local\_o\_start@*));
-
-INT PX(local_size_transposed)(
-    int (*@\color{red}rnk@*), const INT (*@\color{red}*n@*), MPI_Comm comm_cart,
-    INT (*@\color{red}*local\_ni@*), INT (*@\color{red}*local\_i\_start@*)
-    INT (*@\color{red}*local\_no@*), INT (*@\color{red}*local\_o\_start@*));
-INT PX(local_size)(
-    int (*@\color{red}rnk@*), const INT (*@\color{red}*n@*), MPI_Comm comm_cart,
-    INT (*@\color{red}*local\_ni@*), INT (*@\color{red}*local\_i\_start@*));
-
-INT PX(local_size_3d_transposed)(
-    INT (*@\color{green}n0@*), INT (*@\color{green}n1@*), (*@\color{orange}INT n2@*), MPI_Comm (*@\color{red}comm\_cart@*),
-    INT (*@\color{green}*local\_ni0@*), INT (*@\color{green}*local\_i0\_start@*),
-    INT (*@\color{orange}*local\_ni1@*), INT (*@\color{orange}*local\_i1\_start@*),
-    INT (*@\color{green}*local\_no1@*), INT (*@\color{green}*local\_o1\_start@*),
-    INT (*@\color{orange}*local\_no2@*), INT (*@\color{orange}*local\_o2\_start@*));
-INT PX(local_size_3d)(
-    INT (*@\color{green}n0@*), INT (*@\color{green}n1@*), (*@\color{orange}INT n2@*), MPI_Comm (*@\color{red}comm\_cart@*),
-    INT (*@\color{green}*local\_n0@*), INT (*@\color{green}*local\_0\_start@*),
-    INT (*@\color{orange}*local\_n1@*), INT (*@\color{orange}*local\_1\_start@*));
-
-INT PX(local_size_2d_transposed)(
-    INT n0, INT n1, MPI_Comm (*@\color{green}comm@*),
-    INT *local_ni0, INT *local_i0_start,
-    INT *local_no1, INT *local_o1_start);
-INT PX(local_size_2d)(
-    INT n0, INT n1, MPI_Comm (*@\color{green}comm@*),
-    INT *local_n0, INT *local_0_start);
-/* allow arbitrary comm for backward compatibility with FFTW */
+void pfft_free(void *ptr);
+\end{lstlisting}
+to free memory allocated by \code{pfft_alloc_complex}.
+Finally, we exit MPI by
+\begin{lstlisting}
+int MPI_Finalize(void);
 \end{lstlisting}
 
+\section{More sophisticated options}
 
-\emph{New PFFT interface: plan (Guru, Adv, Basic, 3d, 2d)}
+\subsection{Errorcode for communicator creation}
+As we have seen the function
 \begin{lstlisting}
-PX(plan) PX(plan_guru_dft)(
-    int rnk, const INT *n, const INT *ni, const INT *no,
-    const PX(profile) (*@\color{red}*prf@*), const PX(permutation) (*@\color{red}*perm@*),
-    INT howmany, const INT *iblock, const INT *oblock,
-    C *data_in, C *data_out,
-    MPI_Comm comm_cart,
-    int sign, unsigned fftw_flags);
-/* !!! prf depends on perm !!! */
-/* !!! oblock depends on perm, prf, no !!! */
+int pfft_create_procmesh_2d(
+    MPI_Comm comm, int np0, int np1,
+    MPI_Comm *comm_cart_2d);
+\end{lstlisting}
+gives back an integer value, that has not been used in Listing~\ref{lst:min_c2c}.
+This integer is an error code that is equal to zero as long as the communicator was created
+without any errors. The most common error is that the number of processes within the input
+communicator \code{comm} does not fit \code{np0 x np1}. In this case the Cartesian communicator
+is not generated. Therefore, might look like
+\begin{lstlisting}
+/* Create two-dimensional process grid of size np[0] x np[1],
+   if possible */
+if( pfft_create_procmesh_2d(MPI_COMM_WORLD, np[0], np[1],
+        &comm_cart_2d) )
+{
+  pfft_fprintf(MPI_COMM_WORLD, stderr,
+      "Error: This test file only works with %d processes.\n",
+      np[0]*np[1]);
+  MPI_Finalize();
+  return 1;
+}
+\end{lstlisting}
+Hereby, we print the error message with the help of the PFFT library function
+\begin{lstlisting}
+void pfft_fprintf(
+    MPI_Comm comm, FILE *stream, const char *format, ...);
+\end{lstlisting}
+This function is similar to the standard C function \code{fprintf} with the exception, that all messages are restricted
+to the process of rank $0$ within the given communicator.
 
-PX(plan) PX(plan_many_dft)(
-    int rnk, const INT *n, const INT (*@\color{red}*ni@*), const INT (*@\color{red}*no@*),
-    INT (*@\color{red}howmany@*), const INT (*@\color{red}*iblock@*), const INT (*@\color{red}*oblock@*),
-    C *data_in, C *data_out,
-    MPI_Comm comm_cart,
-    int sign, unsigned pfft_flags, unsigned fftw_flags);
-
-PX(plan) PX(plan_dft)(
-    int (*@\color{red}rnk@*), const INT (*@\color{red}*n@*),
-    C *data_in, C *data_out,
-    MPI_Comm comm_cart,
-    int sign, unsigned pfft_flags, unsigned fftw_flags);
-
-PX(plan) PX(plan_dft_3d)(
-    INT (*@\color{green}n0@*), INT (*@\color{green}n1@*), INT (*@\color{orange}n2@*),
-    C *data_in, C *data_out,
-    MPI_Comm (*@\color{red}comm\_cart@*),
-    int sign, unsigned pfft_flags, unsigned fftw_flags);
-PX(plan) PX(plan_dft_2d)(
-    INT n0, INT n1, C *data_in, C *data_out,
-    MPI_Comm (*@\color{green}comm@*),
-    int sign, unsigned pfft_flags, unsigned fftw_flags);
-/* allow arbitrary comm for backward compatibility with FFTW */
+\subsection{Inplace transforms}
+Similar to FFTW, PFFT is able to compute parallel FFTs completely in place, which means that beside some
+constant buffers, no second data array beside the inputs is necessary. Especially, the global data communication
+can be performed in place. As far as we know, there is no other parallel FFT library beside FFTW and PFFT that
+supports this feature. 
+This feature is enabled as soon as the pointer to the output array \code{out} is equal to the pointer to the input array \code{in}.
+E.g., in Listing~\ref{lst:min_c2c} we would call
+\begin{lstlisting}[firstnumber=34]
+/* Plan parallel forward FFT */
+plan = pfft_plan_dft_3d(n, in, in, comm_cart_2d,
+    PFFT_FORWARD, PFFT_TRANSPOSED_NONE);
 \end{lstlisting}
 
-\emph{Interface Layer Names (Like FFTW):}
-\begin{lstlisting}
-local_size[_internal, _guru, _many][_3d, _2d][_transposed]
-plan[_internal, _guru, _many]_dft[_3d, _2d]
-local_size[_internal, _guru, _many]_gc[_3d, _2d]
-plan[_internal, _guru, _many]_gc[_3d, _2d]
-\end{lstlisting}
-
-\emph{Interface Layer Names (Like FFTW) - Merged FFT and GC:}
-\begin{lstlisting}
-local_size[_internal, _guru, _many][_gc][_3d, _2d][_transposed]
-plan[_internal, _guru, _many][_dft, _gc][_3d, _2d]
-\end{lstlisting}
-No need for \lstinline{local_size[_dft, _rdft]}, since we put the physical dimensions into local size.
-
-\newpage
-\emph{New PFFT GCell Interface: local size (Basic, Advanced)}
-\begin{lstlisting}
-INT PX(gc_local_size_internal)(
-    int rnk, const INT *loc_array_size, INT tuple_size,
-    const INT *gc_below, const INT *gc_above);
-
-INT PX(gc_local_size_many)(
-    int rnk, const INT *local_n, const INT *local_start,
-    INT alloc_local, INT howmany,
-    const INT *num_gcells_below, const INT *num_gcells_above,
-    INT *local_ngc, INT *local_gc_start);
-
-INT PX(gc_local_size)(
-    int rnk, const INT *local_n, const INT *local_start,
-    INT alloc_local,
-    const INT *gc_below, const INT *gc_above,
-    INT *local_ngc, INT *local_gc_start);
-\end{lstlisting}
+\subsection{PFFT flags}
+\begin{compactitem}
+  \item \code{PFFT_TRANSPOSED_IN}
+  \item \code{PFFT_TRANSPOSED_OUT}
+  \item \code{PFFT_SHIFTED_IN}
+  \item \code{PFFT_SHIFTED_OUT}
+  \item \code{PFFT_ESTIMATE}
+  \item \code{PFFT_MEASURE}
+  \item \code{PFFT_PATIENT}
+  \item \code{PFFT_EXHAUSIVE}
+  \item \code{PFFT_NO_TUNE}
+  \item \code{PFFT_TUNE}
+  \item \code{PFFT_PRESERVE_INPUT}
+  \item \code{PFFT_DESTROY_INPUT}
+  \item \code{PFFT_BUFFERED_INPLACE}
+\end{compactitem}
 
 
-\emph{New PFFT GCell Interface: plan (Basic, Advanced, Guru, Internal)}
-\begin{lstlisting}
-PX(gcplan) PX(plan_gcells_internal)(
-    int rnk, const INT *n, const PX(permutation) *perm,
-    INT howmany, const INT *block,
-    const INT *gc_below, const INT *gc_above,
-    R *data, MPI_Comm *comms_1d, MPI_Comm comm_cart,
-    unsigned gcflags);
-// tuple_size = 2*howmany*last_dims
+\section{Parallel data distribution}
 
-PX(gcplan) PX(plan_guru_gc)(
-    int rnk, const INT *n, const PX(permutation) *perm,
-    INT howmany, const INT *block,
-    const INT *gc_below, const INT *gc_above,
-    C *data, MPI_Comm comm_cart, unsigned gcflags);
-// gcflags in {ESTIMATE, MEASURE, PATIENT}
-//          x {INPLACE, OUTOFPLACE} x {GC_RMA, GC_SENDRECV}
-// default: flags = OUTOFPLACE
-//          flags += GC_RMA (if possible) otherwise GC_SENDRECV (always possible)
-/* !!! block depends on perm !!! */
 
-PX(gcplan) PX(plan_many_gc)(
-    int rnk, const INT *n,
-    INT howmany, const INT *block,
-    const INT *gc_below, const INT *gc_above,
-    C *data, MPI_Comm comm_cart, unsigned gcflags);
-// gcflags in {NONTRANSPOSED, TRANSPOSED} x {ESTIMATE, MEASURE, PATIENT}
-//          x {INPLACE, OUTOFPLACE} x {GC_RMA, GC_SENDRECV}
-// default: flags = NONTRANSPOSED
 
-PX(gcplan) PX(plan_gc)(
-    int rnk, const INT *n,
-    const INT *gc_below, const INT *gc_above,
-    C *data, MPI_Comm comm_cart, unsigned gcflags);
-// gcflags in {NONTRANSPOSED, TRANSPOSED} x {ESTIMATE, MEASURE, PATIENT}
-//          x {INPLACE, OUTOFPLACE} x {GC_RMA, GC_SENDRECV}
-\end{lstlisting}
 
 
 \newpage
