begin PFFT function reference

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -28,7 +28,8 @@
 \usepackage[svgnames, table, hyperref]{xcolor} %
 \usepackage{paralist} % compact itemize, enumerate, ...
 \usepackage{listings} % source code in LaTeX
-% \usepackage{multirow} % combine multiple rows in arrays
+\usepackage{multirow} % combine multiple rows in arrays
+\usepackage{rotating}
 
 %% improvements of LaTeX enviroments
 \usepackage{scrhack} % avoid warning of scrreprt when loading float package
