--- a/doc/tutorial.tex
+++ b/doc/tutorial.tex
@@ -9,7 +9,7 @@ should also have a look at chapter~\ref{chap:feat}.
 \section{A first parallel transform}
 We explain the basic steps for computing a parallel FFT with the PFFT library at the example
 of the short test program given by Listing~\ref{lst:min_c2c}. This test computes a three-dimensional c2c-FFT on
-a two-dimensional process mesh. The source code can also be found in directory \code{testsgc}
+a two-dimensional process mesh. The source code can also be found in directory \code{tests/}
 of the library's source code tree. 
 \lstinputlisting[float, caption={Minimal parallel c2c-FFT test program.}, label=lst:min_c2c]{code/manual_min_c2c.c}
 
@@ -61,7 +61,7 @@ Next the input and output arrays must be allocated. For performance reasons this
 pfft_complex* pfft_alloc_complex(size_t size);
 \end{lstlisting}
 Nevertheless, you can also use any other dynamic memory allocation. Have a look at Section~3.1
-of the FFTW user manual available under \url{www.fftw.orggcfftw3_doc} for more details on alignment
+of the FFTW user manual available under \url{www.fftw.org/fftw3_doc} for more details on alignment
 and \code{fftw_malloc}, which is called within all PFFT allocation functions.
 
 The planning of a single three-dimensional parallel FFT of size \code{n[0]} x \code{n[1]} x \code{n[2]}
@@ -84,10 +84,9 @@ the planning \code{pfft_plan_dft_3d} would overwrite the input array \code{in}. 
 write any sensitive data into \code{in} until the plan was generated.
 For simplicity, our test program makes use of the library function
 \begin{lstlisting}
-void pfft_init_input_3d(
+void pfft_init_input_c2c_3d(
     ptrdiff_t *n, ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-    MPI_Comm comm_cart_2d,
-    fftw_complex *in);
+    pfft_complex *in);
 \end{lstlisting}
 to fill the input array with some numbers. Alternatively, one can fill the array with a function \code{func} of choice
 and the following loop that takes account of the parallel data layout
@@ -138,8 +137,8 @@ without any errors. The most common error is that the number of processes within
 communicator \code{comm} does not fit \code{np0 x np1}. In this case the Cartesian communicator
 is not generated. Therefore, might look like
 \begin{lstlisting}
-gc* Create two-dimensional process grid of size np[0] x np[1],
-   if possible *gc
+/* Create two-dimensional process grid of size np[0] x np[1],
+   if possible */
 if( pfft_create_procmesh_2d(MPI_COMM_WORLD, np[0], np[1],
         &comm_cart_2d) )
 {
@@ -166,7 +165,7 @@ supports this feature.
 This feature is enabled as soon as the pointer to the output array \code{out} is equal to the pointer to the input array \code{in}.
 E.g., in Listing~\ref{lst:min_c2c} we would call
 \begin{lstlisting}[firstnumber=34]
-gc* Plan parallel forward FFT */
+/* Plan parallel forward FFT */
 plan = pfft_plan_dft_3d(n, in, in, comm_cart_2d,
     PFFT_FORWARD, PFFT_TRANSPOSED_NONE);
 \end{lstlisting}
@@ -205,7 +204,7 @@ However, for the case $d=r=3$ we offer some library
 The dimensionality of the data decomposition is given by the dimension of the Cartesian communicator that
 goes into the PFFT planing routines. Therefore, we present a generalization of communicator creation function
 \begin{lstlisting}
-int PX(create_procmesh)(
+int pfft_create_procmesh(
     int rnk, MPI_Comm comm, const int *np,
     MPI_Comm *comm_cart);
 \end{lstlisting}
@@ -244,27 +243,27 @@ Comparision of non-transposed (left) and transposed (right) $d$-dimensional arra
   \begin{algorithmic}[1]
   %   \State\Comment{Calculate the serial FFTs row wise}
     \For{$t\gets0,\hdots,d-r-2$}
-      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_sgcP_s \times \bigtimes_{s=r}^{d-2-t} N_s$
+      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_s/P_s \times \bigtimes_{s=r}^{d-2-t} N_s$
       \State $N   \gets N_{d-1-t}$
       \State $h_1 \gets \bigtimes_{s=d-t}^{d-1} \hat N_s \times h$
       \State $h_0 \times N \times h_1 \osetarrow{FFT} h_0 \times \hat N \times h_1$
     \EndFor
     \For{$t\gets 0,\hdots,r-1$}
-      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}gcP_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
+      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}/P_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
       \State $N   \gets N_{r-t}$
       \State $h_1 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $h_0 \times N \times h_1 \ousetarrow{FFT}{TO} \hat N \times h_0 \times h_1$
       \State
       \State $L_0 \gets \hat N_{r-t}$
-      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1}\hat N_{s+1}gcP_{s} \times \bigtimes_{s=0}^{r-t-2} N_s/P_s$
+      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1}\hat N_{s+1}/P_{s} \times \bigtimes_{s=0}^{r-t-2} N_s/P_s$
       \State $L_1 \gets N_{r-t-1}$
       \State $h_1 \gets 1$
       \State $h_2 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $P   \gets P_{r-t-1}$
-%       \State \mbox{$L_0 \times h_0 \times L_1gcP \times h_1 \times h_2$} \mbox{$\ousetarrow{T}{TI} L_0/P \times h_0 \times L_1 \times h_1 \times h_2$}
-      \State $L_0 \times h_0 \times L_1gcP \times h_1 \times h_2\ousetarrow{T}{TI} L_0/P \times h_0 \times L_1 \times h_1 \times h_2$
+%       \State \mbox{$L_0 \times h_0 \times L_1/P \times h_1 \times h_2$} \mbox{$\ousetarrow{T}{TI} L_0/P \times h_0 \times L_1 \times h_1 \times h_2$}
+      \State $L_0 \times h_0 \times L_1/P \times h_1 \times h_2\ousetarrow{T}{TI} L_0/P \times h_0 \times L_1 \times h_1 \times h_2$
     \EndFor
-    \State $h_0 \gets \bigtimes_{s=0}^{r-1}\hat N_{s+1}gcP_s$
+    \State $h_0 \gets \bigtimes_{s=0}^{r-1}\hat N_{s+1}/P_s$
     \State $N   \gets N_0$
     \State $h_1 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
     \State $h_0 \times N \times h_1 \osetarrow{FFT} h_0 \times \hat N \times h_1$
@@ -279,7 +278,7 @@ interleaved by global data transpositions with transposed input~\eqref{eq:gtrans
 Finally, a single non-transposed FFT~\eqref{eq:pruned_fft} must be computed to finish the full $d$-dimensional FFT.
 The data decomposition of the output is then given by
 \begin{equation*}
-  \hat N_1gcP_0 \times \hdots \times \hat N_{r-2}/P_{r-1} \times \hat N_r \times \hdots \times \hat N_{d-1} \times h\,.
+  \hat N_1/P_0 \times \hdots \times \hat N_{r-2}/P_{r-1} \times \hat N_r \times \hdots \times \hat N_{d-1} \times h\,.
 \end{equation*}
 Note, that the dimensions of the output array are slightly transposed.
 
@@ -287,37 +286,37 @@ Note, that the dimensions of the output array are slightly transposed.
 Now, the parallel backward FFT framework can be derived very easy since we only need to revert all the steps
 of the forward framework. The backward framework starts with the output decomposition of the forward framework
 \begin{equation*}
-  \hat N_1gcP_0 \times \hdots \times \hat N_{r-2}/P_{r-1} \times \hat N_r \times \hdots \times \hat N_{d-1} \times h
+  \hat N_1/P_0 \times \hdots \times \hat N_{r-2}/P_{r-1} \times \hat N_r \times \hdots \times \hat N_{d-1} \times h
 \end{equation*}
 and ends with the initial data decomposition
 \begin{equation*}
-  N_0gcP_0 \times \hdots \times N_{r-1}/P_{r-1} \times N_r \times \hdots \times N_{d-1} \times h\,.
+  N_0/P_0 \times \hdots \times N_{r-1}/P_{r-1} \times N_r \times \hdots \times N_{d-1} \times h\,.
 \end{equation*}
 \figurename{}~\ref{fig:fft_back} lists the parallel backward FFT framework in pseudo code.
 \begin{figure}[ht]
   \begin{algorithmic}[1]
   %   \State\Comment{Calculate the serial FFTs row wise}
-    \State $h_0 \gets \bigtimes_{s=0}^{r-1}\hat N_{s+1}gcP_s$
+    \State $h_0 \gets \bigtimes_{s=0}^{r-1}\hat N_{s+1}/P_s$
     \State $N   \gets \hat N_0$
     \State $h_1 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
     \State $h_0 \times \hat N \times h_1 \osetarrow{FFT} h_0 \times N \times h_1$
     \For{$t\gets r-1,\hdots,0$}
       \State $L_1 \gets \hat N_{r-t}$
-      \State $h_1 \gets \bigtimes_{s=r-t}^{r-1}\hat N_{s+1}gcP_{s} \times \bigtimes_{s=0}^{r-t-2} N_s/P_s$
+      \State $h_1 \gets \bigtimes_{s=r-t}^{r-1}\hat N_{s+1}/P_{s} \times \bigtimes_{s=0}^{r-t-2} N_s/P_s$
       \State $L_0 \gets N_{r-t-1}$
       \State $h_0 \gets 1$
       \State $h_2 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $P   \gets P_{r-t-1}$
-      \State $L_1gcP \times h_1 \times L_0 \times h_0 \times h_2\ousetarrow{T}{TO} L_1 \times h_1 \times L_0/P \times h_0 \times h_2$
-%       \State \mbox{$L_1gcP \times h_1 \times L_0 \times h_0 \times h_2$} \mbox{$\ousetarrow{T}{TO} L_1 \times h_1 \times L_0/P \times h_0 \times h_2$}
+      \State $L_1/P \times h_1 \times L_0 \times h_0 \times h_2\ousetarrow{T}{TO} L_1 \times h_1 \times L_0/P \times h_0 \times h_2$
+%       \State \mbox{$L_1/P \times h_1 \times L_0 \times h_0 \times h_2$} \mbox{$\ousetarrow{T}{TO} L_1 \times h_1 \times L_0/P \times h_0 \times h_2$}
       \State
-      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}gcP_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
+      \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}/P_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
       \State $N   \gets \hat N_{r-t}$
       \State $h_1 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $\hat N \times h_0 \times h_1 \ousetarrow{FFT}{TI} h_0 \times N \times h_1 $
     \EndFor
     \For{$t\gets d-r-2,\hdots,0$}
-      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_sgcP_s \times \bigtimes_{s=r}^{d-2-t} N_s$
+      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_s/P_s \times \bigtimes_{s=r}^{d-2-t} N_s$
       \State $N   \gets \hat N_{d-1-t}$
       \State $h_1 \gets \bigtimes_{s=d-t}^{d-1} \hat N_s \times h$
       \State $h_0 \times \hat N \times h_1 \osetarrow{FFT} h_0 \times N \times h_1$
@@ -413,25 +412,25 @@ Last step need more general interface to serial FFT module!
   \begin{algorithmic}[1]
   %   \State\Comment{Calculate the serial FFTs row wise}
     \For{$t\gets 0,\hdots,r-1$}
-      \State $h_0 \gets \bigtimes_{s=t}^{r-1}\hat N_{s+1}gcP_s$
+      \State $h_0 \gets \bigtimes_{s=t}^{r-1}\hat N_{s+1}/P_s$
       \State $N   \gets \hat N_t$
-      \State $h_1 \gets \bigtimes_{s=t+1}^{r-1} \hat N_{s+1}gc P_{s} \times \hat N_{r}  \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
+      \State $h_1 \gets \bigtimes_{s=t+1}^{r-1} \hat N_{s+1}/ P_{s} \times \hat N_{r}  \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $h_0 \times \hat N \times h_1 \ousetarrow{FFT}{TO} N \times h_0 \times h_1$
       \State
       \State $L_1 \gets N_t$
-      \State $h_1 \gets \bigtimes_{s=0}^{t-1} N_{s}gcP_{s}$
+      \State $h_1 \gets \bigtimes_{s=0}^{t-1} N_{s}/P_{s}$
       \State $L_0 \gets \hat N_{t+1}$
-      \State $h_0 \gets \bigtimes_{s=t+1}^{r-1}\hat N_{s+1}gcP_{s}$
+      \State $h_0 \gets \bigtimes_{s=t+1}^{r-1}\hat N_{s+1}/P_{s}$
       \State $h_2 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
       \State $P   \gets P_{t}$
-      \State $L_1 \times h_1 \times L_0gcP \times h_0 \times h_2\ousetarrow{T}{TI} L_1/P \times h_1 \times L_0 \times h_0 \times h_2$
+      \State $L_1 \times h_1 \times L_0/P \times h_0 \times h_2\ousetarrow{T}{TI} L_1/P \times h_1 \times L_0 \times h_0 \times h_2$
     \EndFor
-    \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}gcP_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
+    \State $h_0 \gets \bigtimes_{s=r-t}^{r-1} \hat N_{s+1}/P_s \times \bigtimes_{s=0}^{r-t-1} N_s/P_s$
     \State $N   \gets \hat N_{r-t}$
     \State $h_1 \gets \bigtimes_{s=r+1}^{d-1} \hat N_s \times h$
     \State $\hat N \times h_0 \times h_1 \ousetarrow{FFT}{TI} h_0 \times N \times h_1 $
     \For{$t\gets d-r-2,\hdots,0$}
-      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_sgcP_s \times \bigtimes_{s=r}^{d-2-t} N_s$
+      \State $h_0 \gets \bigtimes_{s=0}^{r-1} N_s/P_s \times \bigtimes_{s=r}^{d-2-t} N_s$
       \State $N   \gets \hat N_{d-1-t}$
       \State $h_1 \gets \bigtimes_{s=d-t}^{d-1} \hat N_s \times h$
       \State $h_0 \times \hat N \times h_1 \osetarrow{FFT} h_0 \times N \times h_1$
@@ -468,309 +467,397 @@ void pfft_destroy_plan(pfft_plan fftplan);
 void pfft_init_input_c2c_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     pfft_complex *data);
-void PX(init_input_c2c)(
+void pfft_init_input_c2c(
     int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
     pfft_complex *data);
 \end{lstlisting}
 
 \begin{lstlisting}
-void PX(init_input_r2c_3d)(
+void pfft_init_input_r2c_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     double *data);
-void PX(init_input_r2c)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
-      double *data);
+void pfft_init_input_r2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    double *data);
+\end{lstlisting}
 
-void PX(init_input_r2r_3d)(
+\begin{lstlisting}
+void pfft_init_input_r2r_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     double *data);
-void PX(init_input_r2r)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
-      double *data);
+void pfft_init_input_r2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    double *data);
+\end{lstlisting}
 
-double PX(check_output_c2c_3d)(
+\begin{lstlisting}
+double pfft_check_output_c2c_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     const pfft_complex *data, MPI_Comm comm);
-double PX(check_output_c2c)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
-      const pfft_complex *data, MPI_Comm comm);
+double pfft_check_output_c2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    const pfft_complex *data, MPI_Comm comm);
+\end{lstlisting}
 
-double PX(check_output_c2r_3d)(
+\begin{lstlisting}
+double pfft_check_output_c2r_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     const double *data, MPI_Comm comm);
-double PX(check_output_c2r)(
+double pfft_check_output_c2r(
     int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
     const double *data, MPI_Comm comm);
+\end{lstlisting}
 
- PFFT_EXTERN double PX(check_output_r2r_3d)(
+\begin{lstlisting}
+double pfft_check_output_r2r_3d(
     const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
     const double *data, MPI_Comm comm);
-double PX(check_output_r2r)(
+double pfft_check_output_r2r(
     int rnk_n, const ptrdiff_t *n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
     const double *data, MPI_Comm comm);
+\end{lstlisting}
 
-ptrdiff_t PX(local_size_dft_3d)(
-      const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_dft_r2c_3d)(
-      const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_dft_c2r_3d)(
-      const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_r2r_3d)(
-      const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start, ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_dft_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_r2c_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_c2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_r2r_3d(
+    const ptrdiff_t *n, MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start, ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
 
-ptrdiff_t PX(local_size_dft)(
-      int rnk, const ptrdiff_t *n,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_dft_r2c)(
-      int rnk, const ptrdiff_t *n,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_dft_c2r)(
-      int rnk, const ptrdiff_t *n,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_r2r)(
-      int rnk_n, const ptrdiff_t *n,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_dft(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_r2c(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_dft_c2r(
+    int rnk, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_r2r(
+    int rnk_n, const ptrdiff_t *n,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
 
-ptrdiff_t PX(local_size_many_dft)(
-      int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_many_dft_r2c)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_many_dft_c2r)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
-ptrdiff_t PX(local_size_many_r2r)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      MPI_Comm comm_cart, unsigned pfft_flags,
-      ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
-      ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_many_dft(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+ptrdiff_t pfft_local_size_many_r2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    MPI_Comm comm_cart, unsigned pfft_flags,
+    ptrdiff_t *local_ni, ptrdiff_t *local_i_start,
+    ptrdiff_t *local_no, ptrdiff_t *local_o_start);
+\end{lstlisting}
 
+\begin{lstlisting}
+pfft_plan pfft_plan_dft_3d(
+    const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_r2c_3d(
+    const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_c2r_3d(
+    const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_r2r_3d(
+    const ptrdiff_t *n, double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+\end{lstlisting}
 
-PX(plan) PX(plan_dft_3d)(
-      const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_dft_r2c_3d)(
-      const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_dft_c2r_3d)(
-      const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_r2r_3d)(
-      const ptrdiff_t *n, double *in, double *out, MPI_Comm comm_cart,
-      const PX(r2r_kind) *kinds, unsigned pfft_flags);
-
-PX(plan) PX(plan_dft)(
-      int rnk, const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_dft_r2c)(
-      int rnk_n, const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_dft_c2r)(
-      int rnk_n, const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-  PX(plan) PX(plan_r2r)(
+\begin{lstlisting}
+pfft_plan pfft_plan_dft(
+    int rnk, const ptrdiff_t *n, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_r2r(
     int rnk_n, const ptrdiff_t *n, double *in, double *out, MPI_Comm comm_cart,
-    const PX(r2r_kind) *kinds, unsigned pfft_flags);
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+\end{lstlisting}
 
-PX(plan) PX(plan_many_dft)(
-      int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_many_dft_r2c)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      double *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_many_dft_c2r)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      pfft_complex *in, double *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
-PX(plan) PX(plan_many_r2r)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      double *in, double *out, MPI_Comm comm_cart,
-      const PX(r2r_kind) *kinds, unsigned pfft_flags);
+\begin{lstlisting}
+pfft_plan pfft_plan_many_dft(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_r2c(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    double *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_dft_c2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    pfft_complex *in, double *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+pfft_plan pfft_plan_many_r2r(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    double *in, double *out, MPI_Comm comm_cart,
+    const pfft_r2r_kind *kinds, unsigned pfft_flags);
+\end{lstlisting}
 
-PX(plan) PX(plan_many_dft_skipped)(
-      int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
-      ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
-      const int *skip_trafos, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
-      int sign, unsigned pfft_flags);
+\begin{lstlisting}
+pfft_plan pfft_plan_many_dft_skipped(
+    int rnk, const ptrdiff_t *n, const ptrdiff_t *ni, const ptrdiff_t *no,
+    ptrdiff_t howmany, const ptrdiff_t *iblock, const ptrdiff_t *oblock,
+    const int *skip_trafos, pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
+    int sign, unsigned pfft_flags);
+\end{lstlisting}
 
+\begin{lstlisting}
+ptrdiff_t pfft_prod_ptrdiff_t(
+    int d, const ptrdiff_t *vec);
+ptrdiff_t pfft_sum_ptrdiff_t(
+    int d, const ptrdiff_t *vec);
+int pfft_equal_ptrdiff_t(
+    int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2);
+void pfft_vcopy_ptrdiff_t(
+    int d, const ptrdiff_t *vec1,
+    ptrdiff_t *vec2);
+void pfft_vadd_ptrdiff_t(
+    int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2,
+    ptrdiff_t *sum);
+void pfft_vsub_ptrdiff_t(
+    int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2,
+    ptrdiff_t *sum);
+\end{lstlisting}
 
-ptrdiff_t PX(prod_ptrdiff_t)(
-      int d, const ptrdiff_t *vec);
-ptrdiff_t PX(sum_ptrdiff_t)(
-      int d, const ptrdiff_t *vec);
-int PX(equal_ptrdiff_t)(
-      int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2);
-void PX(vcopy_ptrdiff_t)(
-      int d, const ptrdiff_t *vec1,
-      ptrdiff_t *vec2);
-void PX(vadd_ptrdiff_t)(
-      int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2,
-      ptrdiff_t *sum);
-void PX(vsub_ptrdiff_t)(
-      int d, const ptrdiff_t *vec1, const ptrdiff_t *vec2,
-      ptrdiff_t *sum);
+\begin{lstlisting}
+void pfft_apr_complex_3d(
+    const pfft_complex *data, const ptrdiff_t *local_n,
+    const ptrdiff_t *local_start, const char *name, MPI_Comm comm);
+void pfft_apr_complex_permuted_3d(
+    const pfft_complex *data, const ptrdiff_t *local_n,
+    const ptrdiff_t *local_start,
+    int perm0, int perm1, int perm2, const char *name, MPI_Comm comm);
+\end{lstlisting}
 
-  void PX(apr_complex_3d)(
-      const pfft_complex *data, const ptrdiff_t *local_n,
-      const ptrdiff_t *local_start, const char *name, MPI_Comm comm);
-  void PX(apr_complex_permuted_3d)(
-      const pfft_complex *data, const ptrdiff_t *local_n,
-      const ptrdiff_t *local_start,
-      int perm0, int perm1, int perm2, const char *name, MPI_Comm comm);
+\begin{lstlisting}
+void pfft_get_args(
+    int argc, char **argv, const char *name,
+    int neededArgs, unsigned type,
+    void *parameter);
+\end{lstlisting}
 
-void PX(get_args)(
-      int argc, char **argv, const char *name,
-      int neededArgs, unsigned type,
-      void *parameter);
+\begin{lstlisting}
+void pfft_reset_timer(
+    pfft_plan ths);
+pfft_timer pfft_get_timer(
+    const pfft_plan ths);
+void pfft_print_average_timer(
+    const pfft_plan ths, MPI_Comm comm);
+void pfft_print_average_timer_adv(
+    const pfft_plan ths, MPI_Comm comm);
+void pfft_write_average_timer(
+    const pfft_plan ths, const char *name, MPI_Comm comm);
+void pfft_write_average_timer_adv(
+    const pfft_plan ths, const char *name, MPI_Comm comm);
+\end{lstlisting}
 
+\begin{lstlisting}
+pfft_timer pfft_copy_timer(
+    const pfft_timer orig);
+void pfft_average_timer(
+    pfft_timer ths);
+pfft_timer pfft_add_timers(
+    const pfft_timer sum1, const pfft_timer sum2);
+pfft_timer pfft_reduce_max_timer(
+    const pfft_timer ths, MPI_Comm comm);
+double* pfft_convert_timer2vec(
+    const pfft_timer ths);
+pfft_timer pfft_convert_vec2timer(
+    const double *times);
+void pfft_destroy_timer(
+    pfft_timer ths);
+\end{lstlisting}
 
-void PX(reset_timer)(
-      PX(plan) ths);
-PX(timer) PX(get_timer)(
-      const PX(plan) ths);
-void PX(print_average_timer)(
-      const PX(plan) ths, MPI_Comm comm);
-void PX(print_average_timer_adv)(
-      const PX(plan) ths, MPI_Comm comm);
-void PX(write_average_timer)(
-      const PX(plan) ths, const char *name, MPI_Comm comm);
-void PX(write_average_timer_adv)(
-      const PX(plan) ths, const char *name, MPI_Comm comm);
+\begin{lstlisting}
+void pfft_vfprintf(
+    MPI_Comm comm, FILE *stream, const char *format, va_list ap);
+void pfft_fprintf(
+    MPI_Comm comm, FILE *stream, const char *format, ...);
+void pfft_printf(
+    MPI_Comm comm, const char *format, ...);
+\end{lstlisting}
+These functions are similar to the standard C function \code{vfprintf}, \code{fprintf} and \code{printf} with the exception,
+that all messages are restricted to the process of rank $0$ within the given communicator \code{comm}.
 
-PX(timer) PX(copy_timer)(
-      const PX(timer) orig);
-void PX(average_timer)(
-      PX(timer) ths);
-PX(timer) PX(add_timers)(
-      const PX(timer) sum1, const PX(timer) sum2);
-PX(timer) PX(reduce_max_timer)(
-      const PX(timer) ths, MPI_Comm comm);
-double* PX(convert_timer2vec)(
-      const PX(timer) ths);
-PX(timer) PX(convert_vec2timer)(
-      const double *times);
-void PX(destroy_timer)(
-      PX(timer) ths);
+\subsection{Generating periodic Cartesian communicators}
+\begin{lstlisting}
+int pfft_create_procmesh_2d(
+    MPI_Comm comm, int np0, int np1,
+    MPI_Comm *comm_cart_2d);
+\end{lstlisting}
+This function uses the process group of a given communicator \code{comm} to create and allocate a
+two-dimensional, periodic, Cartesian communicator \code{comm_cart_2d} of size \code{np0*np1}.
+The memory of the generated communicator can be released with \code{MPI_Comm_free}.
+\begin{lstlisting}
+int pfft_create_procmesh(
+    int rnk, MPI_Comm comm, const int *np,
+    MPI_Comm *comm_cart);
+\end{lstlisting}
+Use the process group of a given communicator \code{comm} to create and allocate a
+\code{rnk}-dimensional, periodic, Cartesian communicator of size \code{np[0]*np[1]*...*np[rnk-1]}.
+Hereby, \code{np} is an array of size \code{rnk}.
+The memory of the generated communicator should be released with \code{MPI_Comm_free} after usage.
 
+\subsection{Determine the parallel data decomposition}
 
+\subsection{Determine the parallel ghost cell layout}
 
-void PX(vfprintf)(
-      MPI_Comm comm, FILE *stream, const char *format, va_list ap);
-void PX(fprintf)(
-      MPI_Comm comm, FILE *stream, const char *format, ...);
-void PX(printf)(
-      MPI_Comm comm, const char *format, ...);
+Similarly to the 
 
-int PX(create_procmesh)(
-      int rnk, MPI_Comm comm, const int *np,
-      MPI_Comm *comm_cart);
-int PX(create_procmesh_2d)(
-      MPI_Comm comm, int np0, int np1,
-      MPI_Comm *comm_cart_2d);
+In general, local ghost cell layout is characterized by the local array size $local_ngc[rnk_n]$ and
+the local offset $local_gc_start[rnk_n]$. Every process gets the data 
 
+A process owns the local array data
+\code{data[k[0],k[1],k[2]]} with \code{local_start[t] <= k[t] < local_start[t] + local_n[t]},
+add the ghost cells below and above, such that
+\code{data[k[0],k[1],k[2]]} with \code{gc_below + local_start[t] <= k[t] < local_start[t] + local_n[t]},
 
+Hereby, \code{local_gc_start[t] = local_start[t] - gc_below[t]} and \code{local_ngc[t] = local_n[t] + local_gc_below[t] + local_gc_above[t]}.
 
-ptrdiff_t PX(local_size_gc_3d)(
+\code{data[k[0],k[1],k[2]]} with \code{local_gc_start[t] <= k[t] < local_gc_start[t] + local_ngc[t]}
+
+The output arrays \code{local_ngc} and \code{local_gc_start} give the size and the offset of the local array plus ghost cells, i.e.,
+every process owns the data \code{data[k[0],k[1],k[2]]} with \code{local_gc_start[t] <= k[t] < local_gc_start[t] + local_ngc[t]}
+for \code{t=0,...,rnk-1}. Hereby, the index k wraps periodically if \code{n[t] < local_gc_start[t] + local_ngc[t]}.
+
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_gc_3d(
     const ptrdiff_t *local_n, const ptrdiff_t *local_start,
     ptrdiff_t alloc_local, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
     ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
-ptrdiff_t PX(local_size_gc)(
+\end{lstlisting}
+For a given local array of size \code{local_n} with offset \code{local_n_start} compute the
+local array plus ghost cell size \code{local_ngc} and offset \code{local_gc_start}.
+The number of ghost cells below and above the local array are given by
+Return value is the necessary memory to store the array plus ghost cells.
+Hereby, \code{alloc_local} should be the return value of an appropriate
+call of a \code{pff_local_size} function, see \ref{sec:local_size}.
+
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_gc(
     int rnk_n, const ptrdiff_t *local_n, const ptrdiff_t *local_start,
     ptrdiff_t alloc_local, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
     ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
-ptrdiff_t PX(local_size_many_gc)(
+\end{lstlisting}
+Generalize the three-dimensional interface to \code{rnk} dimensions.
+\begin{lstlisting}
+ptrdiff_t pfft_local_size_many_gc(
     int rnk_n, const ptrdiff_t *local_n, const ptrdiff_t *local_start, ptrdiff_t alloc_local,
     ptrdiff_t howmany, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
     ptrdiff_t *local_ngc, ptrdiff_t *local_gc_start);
-
-PX(gcplan) PX(plan_rgc_3d)(
-      const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
-      double *data, MPI_Comm comm_cart, unsigned gc_flags);
-PX(gcplan) PX(plan_cgc_3d)(
-    const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
-    pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
-PX(gcplan) PX(plan_rgc)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
-      double *data, MPI_Comm comm_cart, unsigned gc_flags);
-PX(gcplan) PX(plan_cgc)(
-      int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
-      pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
-PX(gcplan) PX(plan_many_rgc)(
-      int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
-      const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, double *data, MPI_Comm comm_cart,
-      unsigned gc_flags);
-PX(gcplan) PX(plan_many_cgc)(
-      int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
-      const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, pfft_complex *data, MPI_Comm comm_cart,
-      unsigned gc_flags);
-
-void PX(exchange)(
-      PX(gcplan) ths);
-void PX(reduce)(
-      PX(gcplan) ths);
-void PX(destroy_gcplan)(
-      PX(gcplan) ths);
-
-void PX(reset_gctimers)(
-      PX(gcplan) ths);
-PX(gctimer) PX(get_gctimer_exg)(
-      const PX(gcplan) ths);
-PX(gctimer) PX(get_gctimer_red)(
-      const PX(gcplan) ths);
-void PX(print_average_gctimer)(
-      const PX(gcplan) ths, MPI_Comm comm);
-void PX(print_average_gctimer_adv)(
-      const PX(gcplan) ths, MPI_Comm comm);
-void PX(write_average_gctimer)(
-      const PX(gcplan) ths, const char *name, MPI_Comm comm);
-void PX(write_average_gctimer_adv)(
-      const PX(gcplan) ths, const char *name, MPI_Comm comm);
-
-PX(gctimer) PX(copy_gctimer)(
-      const PX(gctimer) orig);
-void PX(average_gctimer)(
-      PX(gctimer) ths);
-PX(gctimer) PX(add_gctimers)(
-      const PX(gctimer) sum1, const PX(gctimer) sum2);
-PX(gctimer) PX(reduce_max_gctimer)(
-      const PX(gctimer) ths, MPI_Comm comm);
-void PX(convert_gctimer2vec)(
-      const PX(gctimer) ths, double *times);
-PX(gctimer) PX(convert_vec2gctimer)(
-      const double *times);
-void PX(destroy_gctimer)(
-      PX(gctimer) ths);
 \end{lstlisting}
 
+\begin{lstlisting}
+pfft_gcplan pfft_plan_rgc_3d(
+    const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    double *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_cgc_3d(
+    const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_rgc(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    double *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_cgc(
+    int rnk_n, const ptrdiff_t *n, const ptrdiff_t *gc_below, const ptrdiff_t *gc_above,
+    pfft_complex *data, MPI_Comm comm_cart, unsigned gc_flags);
+pfft_gcplan pfft_plan_many_rgc(
+    int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
+    const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, double *data, MPI_Comm comm_cart,
+    unsigned gc_flags);
+pfft_gcplan pfft_plan_many_cgc(
+    int rnk_n, const ptrdiff_t *n, ptrdiff_t howmany, const ptrdiff_t *block,
+    const ptrdiff_t *gc_below, const ptrdiff_t *gc_above, pfft_complex *data, MPI_Comm comm_cart,
+    unsigned gc_flags);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_exchange(
+    pfft_gcplan ths);
+void pfft_reduce(
+    pfft_gcplan ths);
+void pfft_destroy_gcplan(
+    pfft_gcplan ths);
+\end{lstlisting}
+
+\begin{lstlisting}
+void pfft_reset_gctimers(
+    pfft_gcplan ths);
+pfft_gctimer pfft_get_gctimer_exg(
+    const pfft_gcplan ths);
+pfft_gctimer pfft_get_gctimer_red(
+    const pfft_gcplan ths);
+void pfft_print_average_gctimer(
+    const pfft_gcplan ths, MPI_Comm comm);
+void pfft_print_average_gctimer_adv(
+    const pfft_gcplan ths, MPI_Comm comm);
+void pfft_write_average_gctimer(
+    const pfft_gcplan ths, const char *name, MPI_Comm comm);
+void pfft_write_average_gctimer_adv(
+    const pfft_gcplan ths, const char *name, MPI_Comm comm);
+\end{lstlisting}
+
+\begin{lstlisting}
+pfft_gctimer pfft_copy_gctimer(
+    const pfft_gctimer orig);
+void pfft_average_gctimer(
+    pfft_gctimer ths);
+pfft_gctimer pfft_add_gctimers(
+    const pfft_gctimer sum1, const pfft_gctimer sum2);
+pfft_gctimer pfft_reduce_max_gctimer(
+    const pfft_gctimer ths, MPI_Comm comm);
+void pfft_convert_gctimer2vec(
+    const pfft_gctimer ths, double *times);
+pfft_gctimer pfft_convert_vec2gctimer(
+    const double *times);
+void pfft_destroy_gctimer(
+    pfft_gctimer ths);
+\end{lstlisting}
+
+
+% use this line in gvim to substitute PX(func_name_01) by pfft_func_name_01
+%s/PX(\([a-z_0-9]*\))/pfft_\1/gc
